updated todo list

--- a/data-science-toolbox.html
+++ b/data-science-toolbox.html
@@ -111,9 +111,10 @@
 <div id="data-science-toolbox" class="section level1">
 <h1><span class="header-section-number"> 2</span> Data Science Toolbox</h1>
 <p>To do
-- First week of Aug
+- Deadline - First week of Aug
 - Gather old notes from class and code it here
-- Find a way to publish the book once completed
+- review index file and page 1 - grammar and storyline
+- Find a way to publish the book once everything is completed
 - Good luck.</p>
 
 </div>
