updated todo list

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 </div>
 <div id="overview" class="section level1 unnumbered">
 <h1>Overview</h1>
-<p>This is my journey during Covid-19 lockdown in the US and how I was able to learn R programming through Coursera - JHU Data Science Specialization <span class="citation">(Johns Hopkins University <a href="#ref-dss" role="doc-biblioref">2013</a>)</span>. I enrolled for the course on March of 2020 and I will provide the “ah-ha” moment of my journey.</p>
+<p>This is my journey during Covid-19 lockdown in the US and how I was able to learn R programming through Coursera - JHU Data Science Specialization <span class="citation">(Johns Hopkins University <a href="#ref-dss" role="doc-biblioref">2013</a>)</span>. I enrolled for the course in March of 2020 and I will provide the “ah-ha” moment of my journey.</p>
 <p>The program consists of 10 courses that covers the following:</p>
 <ol style="list-style-type: decimal">
 <li><strong>The Data Scientist’s Toolbox</strong></li>
