spelling and grammar check

--- a/references.html
+++ b/references.html
@@ -185,7 +185,13 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 
 <div id="refs" class="references">
 <div>
-<p>Johns Hopkins University. 2013. “Data Science Specialization.” Baltimore, MD: Coursera. <a href="https://www.coursera.org/specializations/jhu-data-science">https://www.coursera.org/specializations/jhu-data-science</a>.</p>
+<p>Canonical Team. 2020. “Canonical Ubuntu.” Johns Hopkins University. <a href="https://ubuntu.com/">https://ubuntu.com/</a>.</p>
+</div>
+<div>
+<p>Johns Hopkins University. 2020. “Data Science Specialization.” Baltimore, MD: Coursera. <a href="https://www.coursera.org/specializations/jhu-data-science">https://www.coursera.org/specializations/jhu-data-science</a>.</p>
+</div>
+<div>
+<p>Kross, Sean. 2020. “The Unix Workbench.” Johns Hopkins University. <a href="https://www.coursera.org/learn/unix?">https://www.coursera.org/learn/unix?</a></p>
 </div>
 <div>
 <p>Ninkovic, Aleksandra. 2020. “Quotable Quote.” GoodReads. <a href="https://www.goodreads.com/quotes/1307639-i-had-a-dream-about-you-it-s-been-a-while">https://www.goodreads.com/quotes/1307639-i-had-a-dream-about-you-it-s-been-a-while</a>.</p>
