--- a/index.html
+++ b/index.html
@@ -51,8 +51,80 @@
 
 
 <script src="libs/accessible-code-block-0.0.1/empty-anchor.js"></script>
+<script src="libs/kePrint-0.0.1/kePrint.js"></script>
+<script src="libs/htmlwidgets-1.5.1/htmlwidgets.js"></script>
+<link href="libs/leaflet-1.3.1/leaflet.css" rel="stylesheet" />
+<script src="libs/leaflet-1.3.1/leaflet.js"></script>
+<link href="libs/leafletfix-1.0.0/leafletfix.css" rel="stylesheet" />
+<script src="libs/Proj4Leaflet-1.0.1/proj4-compressed.js"></script>
+<script src="libs/Proj4Leaflet-1.0.1/proj4leaflet.js"></script>
+<link href="libs/rstudio_leaflet-1.3.1/rstudio_leaflet.css" rel="stylesheet" />
+<script src="libs/leaflet-binding-2.0.3/leaflet.js"></script>
 
 
+<style type="text/css">
+code.sourceCode > span { display: inline-block; line-height: 1.25; }
+code.sourceCode > span { color: inherit; text-decoration: inherit; }
+code.sourceCode > span:empty { height: 1.2em; }
+.sourceCode { overflow: visible; }
+code.sourceCode { white-space: pre; position: relative; }
+pre.sourceCode { margin: 0; }
+@media screen {
+div.sourceCode { overflow: auto; }
+}
+@media print {
+code.sourceCode { white-space: pre-wrap; }
+code.sourceCode > span { text-indent: -5em; padding-left: 5em; }
+}
+pre.numberSource code
+  { counter-reset: source-line 0; }
+pre.numberSource code > span
+  { position: relative; left: -4em; counter-increment: source-line; }
+pre.numberSource code > span > a:first-child::before
+  { content: counter(source-line);
+    position: relative; left: -1em; text-align: right; vertical-align: baseline;
+    border: none; display: inline-block;
+    -webkit-touch-callout: none; -webkit-user-select: none;
+    -khtml-user-select: none; -moz-user-select: none;
+    -ms-user-select: none; user-select: none;
+    padding: 0 4px; width: 4em;
+    color: #aaaaaa;
+  }
+pre.numberSource { margin-left: 3em; border-left: 1px solid #aaaaaa;  padding-left: 4px; }
+div.sourceCode
+  {  background-color: #f8f8f8; }
+@media screen {
+code.sourceCode > span > a:first-child::before { text-decoration: underline; }
+}
+code span.al { color: #ef2929; } /* Alert */
+code span.an { color: #8f5902; font-weight: bold; font-style: italic; } /* Annotation */
+code span.at { color: #c4a000; } /* Attribute */
+code span.bn { color: #0000cf; } /* BaseN */
+code span.cf { color: #204a87; font-weight: bold; } /* ControlFlow */
+code span.ch { color: #4e9a06; } /* Char */
+code span.cn { color: #000000; } /* Constant */
+code span.co { color: #8f5902; font-style: italic; } /* Comment */
+code span.cv { color: #8f5902; font-weight: bold; font-style: italic; } /* CommentVar */
+code span.do { color: #8f5902; font-weight: bold; font-style: italic; } /* Documentation */
+code span.dt { color: #204a87; } /* DataType */
+code span.dv { color: #0000cf; } /* DecVal */
+code span.er { color: #a40000; font-weight: bold; } /* Error */
+code span.ex { } /* Extension */
+code span.fl { color: #0000cf; } /* Float */
+code span.fu { color: #000000; } /* Function */
+code span.im { } /* Import */
+code span.in { color: #8f5902; font-weight: bold; font-style: italic; } /* Information */
+code span.kw { color: #204a87; font-weight: bold; } /* Keyword */
+code span.op { color: #ce5c00; font-weight: bold; } /* Operator */
+code span.ot { color: #8f5902; } /* Other */
+code span.pp { color: #8f5902; font-style: italic; } /* Preprocessor */
+code span.sc { color: #000000; } /* SpecialChar */
+code span.ss { color: #4e9a06; } /* SpecialString */
+code span.st { color: #4e9a06; } /* String */
+code span.va { color: #000000; } /* Variable */
+code span.vs { color: #4e9a06; } /* VerbatimString */
+code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warning */
+</style>
 
 <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
@@ -115,7 +187,7 @@
 </div>
 <div id="overview" class="section level1 unnumbered">
 <h1>Overview</h1>
-<p>This is my journey during Covid-19 lockdown in the US and how I was able to learn R programming through Coursera - JHU Data Science Specialization <span class="citation">(Johns Hopkins University <a href="#ref-dss" role="doc-biblioref">2013</a>)</span>. I enrolled for the course in March of 2020 and I will provide the “ah-ha” moment of my journey.</p>
+<p>This is my journey during Covid-19 lockdown in the US and how I was able to learn R programming through Coursera - JHU Data Science Specialization <span class="citation">(Johns Hopkins University <a href="#ref-dss" role="doc-biblioref">2020</a>)</span>. I enrolled for the course in March of 2020 and I will provide the “ah-ha” moment of my journey.</p>
 <p>The program consists of 10 courses that covers the following:</p>
 <ol style="list-style-type: decimal">
 <li><strong>The Data Scientist’s Toolbox</strong></li>
@@ -149,14 +221,14 @@
 </div>
 <div id="retrospect" class="section level2 unnumbered">
 <h2>Retrospect</h2>
-<p>In retrospect, I would add the following on top of the specialization first which are as follows:</p>
+<p>If I could do it all over again. I would add the following courses, tools and skills on top of the specialization which are as follows:</p>
 <ol style="list-style-type: decimal">
-<li>Get Linux Ubuntu 20.04 LTS as your main environment. I initially started with Microsoft Windows 10. The experience was awful. After the Windows 10 update, it would not let me write on my disk while running RStudio. This added to the sleepless nights. Linux Ubuntu 20.04 LTS is the most stable environment for me.<br />
+<li>Get Linux Ubuntu 20.04 LTS Desktop as your main environment <span class="citation">(Canonical Team <a href="#ref-ubuntu" role="doc-biblioref">2020</a>)</span>. I initially started with Microsoft Windows 10. The experience was awful. After the Windows 10 update, it would not let me write on my disk while running RStudio. This added to the frustration and sleepless nights. Linux Ubuntu 20.04 LTS is the most stable environment for <strong>me</strong>.<br />
 </li>
-<li>Learn the bash through Cousera course <a href="https://www.coursera.org/learn/unix#about">The Unix Workbench</a> by Sean Kross which provides a powerful an insight of the inner working of linux accompanied with Git/Github for version control.</li>
-<li>Learn blogdown or bookdown packages for proper documentation. This will help in organizing your thought process and create a flow for your internal data. It will give you a stricter rule where to save an assignment rather than having them all over your hard drive. There were many days that I have to find saved assignment in my hard-drive. Now, that I have the power of blogdown or bookdown together with github it provides a central place where I can organize my work.<br />
+<li>Learn the bash through Cousera course The Unix Workbench by Sean Kross which provides a powerful insight of the inner working of linux accompanied with Git/Github for version control <span class="citation">(Kross <a href="#ref-unix" role="doc-biblioref">2020</a>)</span>.</li>
+<li>Learn blogdown or bookdown packages for proper documentation. There were many days that I have to find saved assignment in my hard-drive. These packages will organize your thought process and force you to have a central location. Now, that I have the power of blogdown/bookdown together with github, these provides a central place where I can organize my work and have a version control. These are very valuable tools to learn.<br />
 </li>
-<li>Document and complete your specialization using either bookdown or blogdown packages.</li>
+<li>Once complete your specialization using either bookdown or blogdown packages.</li>
 </ol>
 <p>I wish I can go back in-time and start the process with these 3 steps first before jumping into Data Science Specialization.</p>
 
@@ -164,8 +236,14 @@
 </div>
 <h3>References</h3>
 <div id="refs" class="references">
+<div id="ref-ubuntu">
+<p>Canonical Team. 2020. “Canonical Ubuntu.” Johns Hopkins University. <a href="https://ubuntu.com/">https://ubuntu.com/</a>.</p>
+</div>
 <div id="ref-dss">
-<p>Johns Hopkins University. 2013. “Data Science Specialization.” Baltimore, MD: Coursera. <a href="https://www.coursera.org/specializations/jhu-data-science">https://www.coursera.org/specializations/jhu-data-science</a>.</p>
+<p>Johns Hopkins University. 2020. “Data Science Specialization.” Baltimore, MD: Coursera. <a href="https://www.coursera.org/specializations/jhu-data-science">https://www.coursera.org/specializations/jhu-data-science</a>.</p>
+</div>
+<div id="ref-unix">
+<p>Kross, Sean. 2020. “The Unix Workbench.” Johns Hopkins University. <a href="https://www.coursera.org/learn/unix?">https://www.coursera.org/learn/unix?</a></p>
 </div>
 <div id="ref-ninkovic">
 <p>Ninkovic, Aleksandra. 2020. “Quotable Quote.” GoodReads. <a href="https://www.goodreads.com/quotes/1307639-i-had-a-dream-about-you-it-s-been-a-while">https://www.goodreads.com/quotes/1307639-i-had-a-dream-about-you-it-s-been-a-while</a>.</p>
