changes on vennd, grammar/spelling

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   
   
 
-<link rel="next" href="introduction.html"/>
+<link rel="next" href="expect-to-have-lucid-dreams.html"/>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -143,18 +143,20 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 
 <li class="divider"></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a><ul>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html#expect-to-have-lucid-dreams"><i class="fa fa-check"></i>Expect To Have Lucid Dreams</a></li>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html#retrospect"><i class="fa fa-check"></i>Retrospect</a></li>
+<li class="chapter" data-level="" data-path="expect-to-have-lucid-dreams.html"><a href="expect-to-have-lucid-dreams.html"><i class="fa fa-check"></i>Expect To Have Lucid Dreams</a></li>
+<li class="chapter" data-level="" data-path="retrospect.html"><a href="retrospect.html"><i class="fa fa-check"></i>Retrospect</a></li>
 </ul></li>
 <li class="chapter" data-level="1" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i><b>1</b> Introduction</a></li>
 <li class="chapter" data-level="2" data-path="data-science-toolbox.html"><a href="data-science-toolbox.html"><i class="fa fa-check"></i><b>2</b> Data Science Toolbox</a><ul>
-<li class="chapter" data-level="2.1" data-path="data-science-toolbox.html"><a href="data-science-toolbox.html#what-is-data-science"><i class="fa fa-check"></i><b>2.1</b> What is Data Science?</a></li>
+<li class="chapter" data-level="2.1" data-path="what-is-data-science.html"><a href="what-is-data-science.html"><i class="fa fa-check"></i><b>2.1</b> What is Data Science?</a></li>
+<li class="chapter" data-level="2.2" data-path="what-is-data.html"><a href="what-is-data.html"><i class="fa fa-check"></i><b>2.2</b> What is Data?</a></li>
+<li class="chapter" data-level="2.3" data-path="what-is-a-data-scientist.html"><a href="what-is-a-data-scientist.html"><i class="fa fa-check"></i><b>2.3</b> What is a data scientist?</a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="getting-and-cleaning-data.html"><a href="getting-and-cleaning-data.html"><i class="fa fa-check"></i><b>3</b> Getting and Cleaning Data</a></li>
 <li class="chapter" data-level="4" data-path="r-programming.html"><a href="r-programming.html"><i class="fa fa-check"></i><b>4</b> R Programming</a></li>
 <li class="chapter" data-level="5" data-path="applications.html"><a href="applications.html"><i class="fa fa-check"></i><b>5</b> Applications</a><ul>
-<li class="chapter" data-level="5.1" data-path="applications.html"><a href="applications.html#example-one"><i class="fa fa-check"></i><b>5.1</b> Example one</a></li>
-<li class="chapter" data-level="5.2" data-path="applications.html"><a href="applications.html#example-two"><i class="fa fa-check"></i><b>5.2</b> Example two</a></li>
+<li class="chapter" data-level="5.1" data-path="example-one.html"><a href="example-one.html"><i class="fa fa-check"></i><b>5.1</b> Example one</a></li>
+<li class="chapter" data-level="5.2" data-path="example-two.html"><a href="example-two.html"><i class="fa fa-check"></i><b>5.2</b> Example two</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="final-words.html"><a href="final-words.html"><i class="fa fa-check"></i><b>6</b> Final Words</a></li>
 <li class="chapter" data-level="7" data-path="reproducible-research.html"><a href="reproducible-research.html"><i class="fa fa-check"></i><b>7</b> Reproducible Research</a></li>
@@ -203,7 +205,8 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li><strong>Developing Data Products</strong></li>
 <li><strong>Data Science Capstone</strong></li>
 </ol>
-<p>As of today, July 29, 2020 I’m currently at course 10 Data Science Capstone - Week 1. The entire data science specialization can be completed in less than 11 months based on your desire to learn. I’ve put in an average of 5 hours per day in each courses. The reason I wanted to learn these materials so fast are as follows:</p>
+<p>As of today, July 29, 2020 I’m currently at course 10 Data Science Capstone - Week 1. I will summarize a tidy format of my notes during these specialization.</p>
+<p>The entire data science specialization can be completed in less than 11 months based on your desire to learn. I’ve put in an average of 5 hours per day in each courses. The reason I wanted to learn these materials so fast are as follows:</p>
 <ul>
 <li>Personal growth</li>
 <li>Love dissecting data for insights</li>
@@ -212,43 +215,11 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li>Professors abilities to communicate and teach the courses is simple and concise.</li>
 </ul>
 <p>Professor Roger D. Peng, PhD, Professor Brian Caffo, PhD and Professor Jeff Leek, PhD - from the bottom of my heart - thank you so much.</p>
-<div id="expect-to-have-lucid-dreams" class="section level2 unnumbered">
-<h2>Expect To Have Lucid Dreams</h2>
-<div align="center">
-“I had a dream about you. It’s been a while<br>since I could remember any of my dreams,<br>and still, this one has left me with such strong impression.<br><span class="citation">(Ninkovic <a href="#ref-ninkovic" role="doc-biblioref">2020</a>)</span>”
-</div>
-<p><br></p>
-<p>That quote from Aleksandra is one of the many stories that occurred to me while taking these courses. It is not easy. You need perseverance and continuously seeking knowledge. There were nights that turned to days and nights to day and back to night because I could not figure out how to solve a problem. My brain was constantly looking for a solution. Once you solved it, you then moved on to the next challenge with the same twist of time. It gets better 😄 <span class="citation">(<span class="citeproc-not-found" data-reference-id="emo"><strong>???</strong></span>)</span>.</p>
-<p>There was no way for me to complete this program without the help of <a href="https://google.com">google.com</a>, Yihue Xie, PhD - books, Professor Handley Wickham, PhD - books and to all the people that contributed to <a href="https://stackoverflow.com/">stackoverflow</a> - Thank You.</p>
-</div>
-<div id="retrospect" class="section level2 unnumbered">
-<h2>Retrospect</h2>
-<p>If I could do it all over again. I would add the following courses, tools and skills on top of the specialization which are as follows:</p>
-<ol style="list-style-type: decimal">
-<li>Get Linux Ubuntu 20.04 LTS Desktop as your main environment <span class="citation">(Canonical Team <a href="#ref-ubuntu" role="doc-biblioref">2020</a>)</span>. I initially started with Microsoft Windows 10. The experience was awful. After the Windows 10 update, it would not let me write on my disk while running RStudio. This added to the frustration and sleepless nights. Linux Ubuntu 20.04 LTS is the most stable environment for <strong>me</strong>.<br />
-</li>
-<li>Learn the bash through Cousera course The Unix Workbench by Sean Kross which provides a powerful insight of the inner working of linux accompanied with Git/Github for version control <span class="citation">(Kross <a href="#ref-unix" role="doc-biblioref">2020</a>)</span>.</li>
-<li>Learn blogdown or bookdown packages for proper documentation. There were many days that I have to find saved assignment in my hard-drive. These packages will organize your thought process and force you to have a central location. Now, that I have the power of blogdown/bookdown together with github, these provides a central place where I can organize my work and have a version control. These are very valuable tools to learn.<br />
-</li>
-<li>Once complete your specialization using either bookdown or blogdown packages.</li>
-</ol>
-<p>I wish I can go back in-time and start the process with these 3 steps first before jumping into Data Science Specialization.</p>
-
-</div>
 </div>
 <h3>References</h3>
 <div id="refs" class="references">
-<div id="ref-ubuntu">
-<p>Canonical Team. 2020. “Canonical Ubuntu.” Johns Hopkins University. <a href="https://ubuntu.com/">https://ubuntu.com/</a>.</p>
-</div>
 <div id="ref-dss">
 <p>Johns Hopkins University. 2020. “Data Science Specialization.” Baltimore, MD: Coursera. <a href="https://www.coursera.org/specializations/jhu-data-science">https://www.coursera.org/specializations/jhu-data-science</a>.</p>
-</div>
-<div id="ref-unix">
-<p>Kross, Sean. 2020. “The Unix Workbench.” Johns Hopkins University. <a href="https://www.coursera.org/learn/unix?">https://www.coursera.org/learn/unix?</a></p>
-</div>
-<div id="ref-ninkovic">
-<p>Ninkovic, Aleksandra. 2020. “Quotable Quote.” GoodReads. <a href="https://www.goodreads.com/quotes/1307639-i-had-a-dream-about-you-it-s-been-a-while">https://www.goodreads.com/quotes/1307639-i-had-a-dream-about-you-it-s-been-a-while</a>.</p>
 </div>
 </div>
             </section>
@@ -257,7 +228,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
         </div>
       </div>
 
-<a href="introduction.html" class="navigation navigation-next navigation-unique" aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="expect-to-have-lucid-dreams.html" class="navigation navigation-next navigation-unique" aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
