added spelling check index?

--- a/index.html
+++ b/index.html
@@ -138,9 +138,8 @@
 <ul>
 <li>Personal growth</li>
 <li>Love dissecting data for insights</li>
-<li>The course syllabus is well though-out</li>
-<li>Professors bringing their expertise in their respective field</li>
-<li>Professors abilities to communicate and teach the courses is simple and concise.</li>
+<li>The course syllabus is well thought-out</li>
+<li>Professors’ expertise in their respective field and abilities to communicate and teach the courses in a simple and concise manner.</li>
 </ul>
 <p>Professor Roger D. Peng, PhD, Professor Brian Caffo, PhD and Professor Jeff Leek, PhD - from the bottom of my heart - thank you so much.</p>
 </div>
