--- a/expect-to-have-lucid-dreams.html
+++ b/expect-to-have-lucid-dreams.html
@@ -119,13 +119,16 @@
 “I had a dream about you. It’s been a while<br>since I could remember any of my dreams,<br>and still, this one has left me with such strong impression.<br><span class="citation">(Ninkovic <a href="#ref-ninkovic" role="doc-biblioref">2020</a>)</span>”
 </div>
 <p><br></p>
-<p>That quote from Aleksandra is one of the many stories that occurred to me while taking these courses. It is not easy. You need perseverance and continuously seeking knowledge. There were nights that turned to days and nights to day and back to night because I could not figure out how to solve a problem. My brain was constantly looking for a solution. Once you solved it, you then moved on to the next challenge with the same twist of time. It gets better 😄 <span class="citation">(<span class="citeproc-not-found" data-reference-id="emo"><strong>???</strong></span>)</span>.</p>
-<p>There was no way for me to complete this program without the help of <a href="https://google.com">google.com</a>, Yihue Xie, PhD - books, Professor Handley Wickham, PhD - books and to all the people that contributed to <a href="https://stackoverflow.com/">stackoverflow</a> - Thank You.</p>
+<p>That quote from Aleksandra is one of the many stories that occurred to me while taking these courses. It is not easy. You need perseverance and continuously seeking knowledge. There were nights that turned to days and nights to day and back to night because I could not figure out how to solve a problem. My brain was constantly looking for a solution. Once you solved it, you then moved on to the next challenge with the same twist of time. It gets better 😄 <span class="citation">(Wickham <a href="#ref-emo" role="doc-biblioref">2019</a>)</span>.</p>
+<p>There was no way for me to complete this program without the help from <a href="https://google.com">google.com</a>, Yihue Xie, PhD - books, Professor Handley Wickham, PhD - books and to all the people that contributed to <a href="https://stackoverflow.com/">stackoverflow</a> - Thank You.</p>
 </div>
 <h3>References</h3>
 <div id="refs" class="references">
 <div id="ref-ninkovic">
 <p>Ninkovic, Aleksandra. 2020. “Quotable Quote.” GoodReads. <a href="https://www.goodreads.com/quotes/1307639-i-had-a-dream-about-you-it-s-been-a-while">https://www.goodreads.com/quotes/1307639-i-had-a-dream-about-you-it-s-been-a-while</a>.</p>
+</div>
+<div id="ref-emo">
+<p>Wickham, Hadley. 2019. “Emo(ji).” GitHub. <a href="https://github.com/hadley/emo">https://github.com/hadley/emo</a>.</p>
 </div>
 </div>
             </section>
