added building dashboard

--- a/data-science-toolbox.html
+++ b/data-science-toolbox.html
@@ -155,24 +155,24 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="" data-path="in-retrospect.html"><a href="in-retrospect.html"><i class="fa fa-check"></i>In Retrospect</a></li>
 </ul></li>
 <li class="chapter" data-level="1" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i><b>1</b> Introduction</a></li>
-<li class="chapter" data-level="2" data-path="data-science-toolbox.html"><a href="data-science-toolbox.html"><i class="fa fa-check"></i><b>2</b> Data Science Toolbox</a></li>
-<li class="chapter" data-level="3" data-path="so-much-more.html"><a href="so-much-more.html"><i class="fa fa-check"></i><b>3</b> So Much More</a></li>
-<li class="chapter" data-level="4" data-path="what.html"><a href="what.html"><i class="fa fa-check"></i><b>4</b> What</a><ul>
-<li class="chapter" data-level="4.1" data-path="what-is-data-science.html"><a href="what-is-data-science.html"><i class="fa fa-check"></i><b>4.1</b> What is Data Science?</a></li>
-<li class="chapter" data-level="4.2" data-path="what-is-data.html"><a href="what-is-data.html"><i class="fa fa-check"></i><b>4.2</b> What is Data?</a></li>
-<li class="chapter" data-level="4.3" data-path="what-is-a-data-scientist.html"><a href="what-is-a-data-scientist.html"><i class="fa fa-check"></i><b>4.3</b> What is a data scientist?</a></li>
+<li class="chapter" data-level="2" data-path="data-science-toolbox.html"><a href="data-science-toolbox.html"><i class="fa fa-check"></i><b>2</b> Data Science Toolbox</a><ul>
+<li class="chapter" data-level="2.1" data-path="so-much-more.html"><a href="so-much-more.html"><i class="fa fa-check"></i><b>2.1</b> So Much More</a></li>
+<li class="chapter" data-level="2.2" data-path="layout-of-the-course.html"><a href="layout-of-the-course.html"><i class="fa fa-check"></i><b>2.2</b> Layout of the Course</a></li>
+<li class="chapter" data-level="2.3" data-path="what-is-data-science.html"><a href="what-is-data-science.html"><i class="fa fa-check"></i><b>2.3</b> What is Data Science?</a></li>
+<li class="chapter" data-level="2.4" data-path="what-is-data.html"><a href="what-is-data.html"><i class="fa fa-check"></i><b>2.4</b> What is Data?</a></li>
+<li class="chapter" data-level="2.5" data-path="what-is-a-data-scientist.html"><a href="what-is-a-data-scientist.html"><i class="fa fa-check"></i><b>2.5</b> What is a data scientist?</a></li>
 </ul></li>
-<li class="chapter" data-level="5" data-path="getting-and-cleaning-data.html"><a href="getting-and-cleaning-data.html"><i class="fa fa-check"></i><b>5</b> Getting and Cleaning Data</a></li>
-<li class="chapter" data-level="6" data-path="r-programming.html"><a href="r-programming.html"><i class="fa fa-check"></i><b>6</b> R Programming</a></li>
-<li class="chapter" data-level="7" data-path="applications.html"><a href="applications.html"><i class="fa fa-check"></i><b>7</b> Applications</a><ul>
-<li class="chapter" data-level="7.1" data-path="example-one.html"><a href="example-one.html"><i class="fa fa-check"></i><b>7.1</b> Example one</a></li>
-<li class="chapter" data-level="7.2" data-path="example-two.html"><a href="example-two.html"><i class="fa fa-check"></i><b>7.2</b> Example two</a></li>
+<li class="chapter" data-level="3" data-path="getting-and-cleaning-data.html"><a href="getting-and-cleaning-data.html"><i class="fa fa-check"></i><b>3</b> Getting and Cleaning Data</a></li>
+<li class="chapter" data-level="4" data-path="r-programming.html"><a href="r-programming.html"><i class="fa fa-check"></i><b>4</b> R Programming</a></li>
+<li class="chapter" data-level="5" data-path="applications.html"><a href="applications.html"><i class="fa fa-check"></i><b>5</b> Applications</a><ul>
+<li class="chapter" data-level="5.1" data-path="example-one.html"><a href="example-one.html"><i class="fa fa-check"></i><b>5.1</b> Example one</a></li>
+<li class="chapter" data-level="5.2" data-path="example-two.html"><a href="example-two.html"><i class="fa fa-check"></i><b>5.2</b> Example two</a></li>
 </ul></li>
-<li class="chapter" data-level="8" data-path="final-words.html"><a href="final-words.html"><i class="fa fa-check"></i><b>8</b> Final Words</a></li>
-<li class="chapter" data-level="9" data-path="reproducible-research.html"><a href="reproducible-research.html"><i class="fa fa-check"></i><b>9</b> Reproducible Research</a></li>
-<li class="chapter" data-level="10" data-path="regression-models.html"><a href="regression-models.html"><i class="fa fa-check"></i><b>10</b> Regression Models</a></li>
-<li class="chapter" data-level="11" data-path="practical-machine-learning.html"><a href="practical-machine-learning.html"><i class="fa fa-check"></i><b>11</b> Practical Machine Learning</a></li>
-<li class="chapter" data-level="12" data-path="developing-data-products.html"><a href="developing-data-products.html"><i class="fa fa-check"></i><b>12</b> Developing Data Products</a></li>
+<li class="chapter" data-level="6" data-path="final-words.html"><a href="final-words.html"><i class="fa fa-check"></i><b>6</b> Final Words</a></li>
+<li class="chapter" data-level="7" data-path="reproducible-research.html"><a href="reproducible-research.html"><i class="fa fa-check"></i><b>7</b> Reproducible Research</a></li>
+<li class="chapter" data-level="8" data-path="regression-models.html"><a href="regression-models.html"><i class="fa fa-check"></i><b>8</b> Regression Models</a></li>
+<li class="chapter" data-level="9" data-path="practical-machine-learning.html"><a href="practical-machine-learning.html"><i class="fa fa-check"></i><b>9</b> Practical Machine Learning</a></li>
+<li class="chapter" data-level="10" data-path="developing-data-products.html"><a href="developing-data-products.html"><i class="fa fa-check"></i><b>10</b> Developing Data Products</a></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
@@ -196,15 +196,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
             <section class="normal" id="section-">
 <div id="data-science-toolbox" class="section level1">
 <h1><span class="header-section-number"> 2</span> Data Science Toolbox</h1>
-<p><strong>To do</strong></p>
-<ul>
-<li>Deadline - First week of Aug</li>
-<li>Gather old notes from class and code it here</li>
-<li>review index file and page 1 - grammar and story line</li>
-<li>Find a way to publish the book once everything is completed</li>
-<li>Good luck.</li>
-</ul>
-<p>The Data Science Toolbox provides a basic foundation in creating a work environment as a data scientist. This environment is based on the R language. It is an environment for statistical computing and graphics and so much more. It is similar to the S language developed at Bell Laboratories by John Chambers and his team <span class="citation">(The R Foundation <a href="#ref-wiki" role="doc-biblioref">2020</a>)</span>. R language is created by Ross Ihaka and Robert Gentleman at the University of Auckland, New Zealand and is developed by the R Development Core Team. Thus, R is named after the first initials of the co-creators Ross &amp; Robert <span class="citation">(Wikipedia <a href="#ref-wikipedia" role="doc-biblioref">2020</a><a href="#ref-wikipedia" role="doc-biblioref">b</a>)</span>. R<sup>2</sup> sounds better.</p>
+<p>The Data Science Toolbox provides a basic foundation in creating a work environment as a data scientist. This environment is based on the R language. It is an environment for statistical computing and graphics and so much more. It is similar to the S language developed at Bell Laboratories by John Chambers and his team <span class="citation">(The R Foundation <a href="#ref-wiki" role="doc-biblioref">2020</a>)</span>. R language is created by Ross Ihaka and Robert Gentleman at the University of Auckland, New Zealand and is developed by the R Development Core Team. Thus, R is named after the first initials of the co-creators Ross &amp; Robert <span class="citation">(Wikipedia <a href="#ref-wikipedia" role="doc-biblioref">2019</a>)</span>.</p>
 </div>
 <h3>References</h3>
 <div id="refs" class="references">
@@ -212,7 +204,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <p>The R Foundation. 2020. “What Is R?” <a href="https://www.r-project.org/about.html">https://www.r-project.org/about.html</a>.</p>
 </div>
 <div id="ref-wikipedia">
-<p>Wikipedia. 2020b. “R (Programming Language).” Wikipedia, The Free Encyclopedia. <a href="https://en.wikipedia.org/wiki/R_(programming_language)">https://en.wikipedia.org/wiki/R_(programming_language)</a>.</p>
+<p>Wikipedia. 2019. “R (Programming Language).” Wikipedia, The Free Encyclopedia. <a href="https://en.wikipedia.org/wiki/R_(programming_language)">https://en.wikipedia.org/wiki/R_(programming_language)</a>.</p>
 </div>
 </div>
             </section>
